# finance-agent-standard

./: IDEA.md  README.md  pyproject.toml
src/finance_agent_standard/: __init__.py  cli.py  finance_engine.py
