[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finance-agent-standard"
version = "0.1.0"
description = "The open-source standard for autonomous financial analysis"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
maintainers = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
keywords = [
    "finance",
    "financial-analysis",
    "sec-filings",
    "dcf",
    "equity-research",
    "valuation",
    "investment",
    "wall-street",
    "fintech"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.25",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/avasis-ai/finance-agent-standard"
Documentation = "https://github.com/avasis-ai/finance-agent-standard#readme"
Repository = "https://github.com/avasis-ai/finance-agent-standard.git"
Issues = "https://github.com/avasis-ai/finance-agent-standard/issues"

[project.scripts]
finance-agent = "finance_agent_standard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_agent_standard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
